--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,20 @@
 # Python files
 .python-version
 *__pycache__*
+
+# Node dependencies
+frontend/node_modules
+frontend/.pnp
+.pnp.js
+
+# Node misc
+.eslintcache
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Node logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
