--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.7.9"
 Django = "^3.1.5"
 djangorestframework = "^3.12.2"
 django-cors-headers = "^3.6.0"
+djangorestframework-gis = "^0.16"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.1"
