--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,11 +2,11 @@
   "name": "counterfactualcovid-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/alan-turing-institute/CounterfactualCovid19",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.2",
     "gh-pages": "^3.1.0",
     "leaflet": "^1.6.0",
