Applied black autoformatting

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ django-cors-headers = "^3.6.0"
 djangorestframework-gis = "^0.16"
 
 [tool.poetry.dev-dependencies]
+black = "^20.8b1"
 pytest = "^6.2.1"
 
 [build-system]
