--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,7 @@ Django = "^3.1.5"
 djangorestframework = "^3.12.2"
 django-cors-headers = "^3.6.0"
 djangorestframework-gis = "^0.16"
+psycopg2 = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
