Switch from spatialite to PostgreSQL throughout

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,12 +1,19 @@
 # Use an official Python runtime as a parent image
 FROM python:3.9-slim-buster
 
+# Ensure that logs appear in the correct order without buffering
+ENV PYTHONUNBUFFERED=1
+
 # Add the backend directory to make absolute filepaths consistent across services
 WORKDIR /app/backend
 
-# Install spatialite
-RUN apt-get update && apt-get -y install gdal-bin
-RUN apt-get update && apt-get -y install libsqlite3-mod-spatialite
+# Install PostgreSQL client drivers
+RUN apt-get update && apt-get -y install \
+    build-essential \
+    gdal-bin \
+    libpq-dev \
+    postgresql-client \
+    postgresql-client-common
 
 # Install Python dependencies
 COPY pyproject.toml /app/backend
@@ -20,14 +27,9 @@ COPY . /app/backend
 # Make port 8000 available for the app
 EXPOSE 8000
 
-# Set up the database
-RUN apt-get update && apt-get -y install sqlite3
-RUN sqlite3 --version
-# RUN apt-get update && apt-get -y install spatialite
-# RUN spatialite --version
-RUN poetry run python3 manage.py makemigrations
-RUN poetry run python3 manage.py migrate
-RUN poetry run python3 manage.py loaddata countries
-
-# Entrypoint. Note that this uses 0.0.0.0 for the host so that the browser can find it
-CMD poetry run python3 manage.py runserver 0.0.0.0:8000 --noreload
+# Set up the database and run the server
+# Note that this uses 0.0.0.0 for the host so that the browser can find it
+CMD poetry run python3 manage.py makemigrations && \
+    poetry run python3 manage.py migrate && \
+    poetry run python3 manage.py loaddata countries && \
+    poetry run python3 manage.py runserver 0.0.0.0:8000
