--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "5432:5432"
   backend:
     build: ./backend
+    environment:
+      - DJANGO_SETTINGS_MODULE=backend.settings.docker
     links:
       - db:db
     networks:
