script that reads cases data process it and builds database with total number of cases per country on a given date period

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -32,4 +32,5 @@ EXPOSE 8000
 CMD poetry run python3 manage.py makemigrations && \
     poetry run python3 manage.py migrate && \
     poetry run python3 manage.py loaddata countries && \
+    poetry run python3 manage.py runscript cases_load && \
     poetry run python3 manage.py runserver 0.0.0.0:8000
