--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "leaflet": "^1.7.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.5",
     "react-scripts": "^4.0.1"
