Added git pull rebase step

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,9 @@
-# Node dependencies
+# External node dependencies
 frontend/node_modules
 
 # Files covered by other linters
 *.py
 *.md
+
+# Files that must not be changed during CI
+.github/workflows
