--- a/.github/workflows/enforce-code-style.yml
+++ b/.github/workflows/enforce-code-style.yml
@@ -24,6 +24,7 @@ jobs:
           git fetch
           git checkout ${{ github.head_ref }}
           git commit -am "Reformat Python using Black"
+          git pull --rebase
           git push
   enforce-style-javascript:
     runs-on: ubuntu-latest
@@ -33,7 +34,7 @@ jobs:
       - name: Set up Node 15
         uses: actions/setup-node@v2
         with:
-          node-version: '15'
+          node-version: "15"
       - name: Install prettier
         run: npm install prettier
       - name: Run prettier --check
@@ -42,10 +43,12 @@ jobs:
         if: failure()
         run: |
           npx prettier --write .
+          git diff .github/workflows/enforce-code-style.yml
           git config --global user.name 'AutoLinter'
           git config --global user.email 'autolinter@noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
           git fetch
           git checkout ${{ github.head_ref }}
           git commit -am "Reformat Javascript using prettier"
+          git pull --rebase
           git push
