--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,4 +33,5 @@ CMD poetry run python3 manage.py makemigrations && \
     poetry run python3 manage.py migrate && \
     poetry run python3 manage.py loaddata countries && \
     poetry run python3 manage.py runscript cases_load && \
+    poetry run python3 manage.py runscript time_series_load && \
     poetry run python3 manage.py runserver 0.0.0.0:8000
