--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.5",
     "react-scripts": "^4.0.1",
-    "recharts": "^2.0.3"
+    "recharts": "^2.0.3",
+    "reactstrap": "8.9.0"
   },
   "scripts": {
     "predeploy": "npm run build",
