--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -34,4 +34,5 @@ CMD poetry run python3 manage.py makemigrations && \
     poetry run python3 manage.py loaddata countries && \
     poetry run python3 manage.py runscript cases_load && \
     poetry run python3 manage.py runscript dates_load && \
+    poetry run python3 manage.py runscript knotpoints_load && \
     poetry run python3 manage.py runserver 0.0.0.0:8000
