--- a/.github/workflows/enforce-code-style.yml
+++ b/.github/workflows/enforce-code-style.yml
@@ -10,8 +10,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install Black
-        run: pip install black
+      - name: Install Black and pylint
+        run: pip install black pylint
+      - name: Check style with pylint
+        run: pylint backend/*/ --disable=duplicate-code,invalid-name,line-too-long,too-few-public-methods,too-many-ancestors
       - name: Run black --check
         run: black --check .
       - name: If needed, commit black changes to the pull request
