--- a/.github/workflows/enforce-code-style.yml
+++ b/.github/workflows/enforce-code-style.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install Black and pylint
+      - name: Install tools
         run: pip install black pylint
       - name: Check style with pylint
         run: pylint backend/*/ --disable=duplicate-code,invalid-name,line-too-long,too-few-public-methods,too-many-ancestors
