--- a/.github/workflows/enforce-code-style.yml
+++ b/.github/workflows/enforce-code-style.yml
@@ -10,8 +10,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.9
-      - name: Install tools
-        run: pip install black pylint
+      - name: Install poetry
+        run: pip install poetry
+      - name: Install dependencies
+        run: cd backend && poetry config virtualenvs.create false && poetry install
       - name: Check style with pylint
         run: pylint backend/*/ --disable=duplicate-code,invalid-name,line-too-long,too-few-public-methods,too-many-ancestors
       - name: Run black --check
