--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,19 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "leaflet": "^1.7.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.3",
-    "react-dom": "^17.0.1",
-    "react-leaflet": "^3.0.5",
-    "react-scripts": "^4.0.1",
-    "recharts": "^2.0.3",
-    "reactstrap": "8.9.0"
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.1.0",
+    "react-scripts": "^4.0.3",
+    "reactstrap": "8.9.0",
+    "recharts": "^2.0.9"
   },
   "scripts": {
     "predeploy": "npm run build",
