--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -39,5 +39,4 @@ jobs:
         cd backend && poetry config virtualenvs.create false && poetry install
     - name: Run tests
       run: |
-        cd backend && echo $pwd
-        python -Wa manage.py test tests
+        cd backend && python -Wa manage.py test tests
