--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,8 @@
     "react-leaflet": "^3.1.0",
     "react-scripts": "^4.0.3",
     "reactstrap": "8.9.0",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "react-date-picker": "7.8.1"
   },
   "scripts": {
     "predeploy": "npm run build",
