--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.1",
     "leaflet": "^1.7.1",
+    "prop-types": "^15.7.2",
+    "prop-types-exact": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-date-picker": "8.1.1",
