--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "prop-types-exact": ">=1.2.0",
     "react": ">=17.0.2",
     "react-bootstrap": ">=1.6.0",
-    "react-date-picker": ">=8.2.0",
+    "react-datepicker": ">=4.1.0",
     "react-dom": ">=17.0.2",
     "react-leaflet": ">=3.2.0",
     "react-scripts": ">=4.0.3",
