--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": ">=0.21.1",
+    "axios-retry": ">=3.1.9",
     "bootstrap": ">=5.0.1",
     "leaflet": ">=1.7.1",
     "prop-types": ">=15.7.2",
