--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "axios": ">=0.21.1",
     "axios-retry": ">=3.1.9",
     "bootstrap": ">=5.0.1",
+    "immer": ">=9.0.3",
     "leaflet": ">=1.7.1",
     "prop-types": ">=15.7.2",
     "prop-types-exact": ">=1.2.0",
