--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "axios": ">=0.21.1",
     "axios-retry": ">=3.1.9",
-    "bootstrap": ">=5.0.1",
+    "bootstrap": ">=5.0.2",
     "immer": ">=9.0.3",
     "leaflet": ">=1.7.1",
+    "p-debounce": ">=4.0.0",
     "prop-types": ">=15.7.2",
     "prop-types-exact": ">=1.2.0",
     "react": ">=17.0.2",
@@ -20,10 +21,10 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": ">=5.14.1",
-    "@testing-library/react": ">=11.2.7",
+    "@testing-library/react": ">=12.0.0",
     "babel-eslint": ">=10.1.0",
     "eslint-config-react-app": ">=6.0.0",
-    "eslint-plugin-flowtype": ">=5.7.2",
+    "eslint-plugin-flowtype": ">=5.8.0",
     "eslint-plugin-import": ">=2.23.4",
     "eslint-plugin-jsx-a11y": ">=6.4.1",
     "eslint-plugin-react": ">=7.24.0"
