--- a/.github/workflows/enforce-code-style.yml
+++ b/.github/workflows/enforce-code-style.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install dependencies
         run: cd backend && poetry config virtualenvs.create false && poetry install
       - name: Check style with pylint
-        run: pylint backend/*/ --disable=duplicate-code,invalid-name,line-too-long,too-few-public-methods,too-many-ancestors
+        run: pylint backend/*/ --rcfile=.pylintrc
       - name: Run black --check
         run: black --check .
       - name: If needed, commit black changes to the pull request
