--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Node runtime as a parent image
-FROM node:16.3.0-alpine3.13
+FROM node:16.3.0-alpine3.13 as build
 
 # Add the frontend directory to make absolute filepaths consistent across services
 WORKDIR /app/frontend
@@ -12,10 +12,14 @@ RUN npm install --legacy-peer-deps
 COPY . /app/frontend
 
 RUN npm run build 
-RUN npm install -g serve
 
 # Make port 3000 available for the app
-EXPOSE 3000
 
-# Entrypoint
-CMD ["serve", "-s", "build", "-l", "3000"]
+# production environment
+FROM nginx:stable-alpine
+COPY --from=build /app/frontend/build /usr/share/nginx/html
+# new
+COPY --from=build /app/frontend/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+EXPOSE 3000
+CMD ["nginx", "-g", "daemon off;"]
+
