:heavy_plus_sign: Pin pandas in pyproject requirements as newest version cannot be installed

--- a/.github/workflows/enforce-code-style.yml
+++ b/.github/workflows/enforce-code-style.yml
@@ -11,9 +11,13 @@ jobs:
         with:
           python-version: 3.9
       - name: Install poetry
-        run: pip install poetry
+        run: pip install --upgrade pip poetry setuptools
       - name: Install dependencies
-        run: cd backend && poetry config virtualenvs.create false && poetry install
+        run: |
+          cd backend
+          poetry config virtualenvs.create false
+          poetry config experimental.new-installer false
+          poetry install
       - name: Check style with pylint
         run: pylint backend/*/ --rcfile=.pylintrc
       - name: Run black --check
