--- a/.github/workflows/test-backend.yml
+++ b/.github/workflows/test-backend.yml
@@ -33,10 +33,14 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install poetry
+      run: pip install --upgrade pip poetry setuptools
     - name: Install Python dependencies
-      run: |
-        pip install --upgrade pip poetry setuptools
-        cd backend && poetry config virtualenvs.create false && poetry install
+        run: |
+          cd backend
+          poetry config virtualenvs.create false
+          poetry config experimental.new-installer false
+          poetry install
     - name: Run tests
       run: |
         cd backend && python -Wa manage.py test tests
