updated docker-compose for new acr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     restart: always
   backend:
     build: ./backend
-    image: cfvoc.azurecr.io/cfcov-backend:v1
+    image: itscares.azurecr.io/cfcov-backend:v1
     depends_on:
       - db
     environment:
@@ -24,7 +24,7 @@ services:
     restart: always
   frontend:
     build: ./frontend
-    image: cfvoc.azurecr.io/cfcov-frontend:v1
+    image: itscares.azurecr.io/cfcov-frontend:v1
     depends_on:
       - backend
     ports:
